--- a/src/App.less
+++ b/src/App.less
@@ -1,6 +1,286 @@
+@width:40rem;
 .App {
   width: 100%;
   height: 100vh;
   background: url('./images/bg.png');
   text-align: center;
+  .index{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    .focks{
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.68);
+      position: absolute;
+      z-index: 999;
+      .cloumn{
+        width: 677/@width;
+        height: 588/@width;
+        position: absolute;
+        left: 60/@width;
+        top: 160/@width;
+        z-index: 1;
+      }
+      .code{
+        width: 258/@width;
+        height: 258/@width;
+        position: absolute;
+        left: 246/@width;
+        bottom: 160/@width;
+      }
+      .face{
+        width: 400/@width;
+        position: absolute;
+        left: 175/@width;
+        top: 80/@width;
+        z-index: 2;
+      }
+      .guohui{
+        width: 135/@width;
+        position: absolute;
+        left: 58/@width;
+        top: 140/@width;
+        z-index: 2;
+      }
+    }
+    .mask{
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.68);
+      position: absolute;
+      z-index: 999;
+      img{
+        width: 683/@width;
+        height: 589/@width;
+        position: absolute;
+        top: 280/@width;
+        left: 53/@width;
+      }
+    }
+    .icon1{
+      width: 82/@width;
+      height: 92/@width;
+      position: absolute;
+      top:31/@width;
+      left: 372@width;
+      z-index: 1;
+    }
+    .icon2{
+      width:180/@width;
+      height: 132/@width;
+      position: absolute;
+      bottom:309/@width;
+      right: 34/@width;
+      z-index: 1;
+    }
+    .icon3{
+      width:97/@width;
+      height: 157/@width;
+      position: absolute;
+      bottom:49/@width;
+      right: 33/@width;
+      z-index: 1;
+    }
+    .icon4{
+      width:100/@width;
+      height: 65/@width;
+      position: absolute;
+      bottom:86/@width;
+      left: 40/@width;
+      z-index: 1;
+    }
+    .icon5{
+      width:107/@width;
+      height: 94/@width;
+      position: absolute;
+      top:530/@width;
+      left: 46/@width;
+      z-index: 1;
+    }
+    .icon6{
+      width:361/@width;
+      height: 370/@width;
+      position: absolute;
+      bottom:359/@width;
+      left: 77/@width;
+      z-index: 1;
+    }
+    .icon7{
+      width: 139/@width;
+      height: 143/@width;
+      position: absolute;
+      top: 139/@width;
+      left: 84/@width;
+      z-index: 1;
+    }
+    .icon8{
+      width: 601/@width;
+      height: 268/@width;
+      position: absolute;
+      top: 130/@width;
+      left: 94/@width;
+      z-index: 1;
+    }
+    .icon9{
+      width: 226/@width;
+      height: 232/@width;
+      position: absolute;
+      top: 297/@width;
+      right: 68/@width;
+      z-index: 1;
+    }
+    .face1{
+      width: 550/@width;
+      position: absolute;
+      top: 280/@width;
+      right: 30/@width;
+      z-index: 9;
+    }
+    .btn1{
+      width: 226/@width;
+      height: 96/@width;
+      position: absolute;
+      bottom: 185/@width;
+      right: 95/@width;
+    }
+    .btn2{
+      width: 226/@width;
+      height: 96/@width;
+      position: absolute;
+      bottom: 185/@width;
+      left: 95/@width;
+    }
+    .header{
+      width: 100%;
+      font-size: 24/@width;
+      font-weight: 900;
+      color: #91475c;
+      text-align: center;
+      bottom: 36/@width;
+      position: absolute;
+      span{
+        margin-left: 14/@width;
+      }
+    }
+  }
+  .question{
+    width:100%;
+    height: 100%;
+    position: relative;
+    .ensure_fail{
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.68);
+      position: absolute;
+      z-index: 999;
+      .content{
+        width: 648/@width;
+        height: 706/@width;
+        background: url('./images/datikuang.png');
+        background-size: 100% 100%;
+        position: absolute;
+        top: 231/@width;
+        left: 51/@width;
+        z-index: 9;
+        .title{
+          font-size: 48/@width;
+          line-height: 92/@width;
+        }
+        .answer{
+          width: 366/@width;
+          height: 75/@width;
+          background: url('./images/answer.png');
+          background-size: 100% 100%;
+          text-align: center;
+          margin: 20/@width auto;
+          line-height: 75/@width;
+          color: #5f3209;
+          font-size: 30/@width;
+        }
+        .btn{
+          width: 269/@width;
+          height: 94/@width;
+          position: absolute;
+          left: 195/@width;
+          bottom: -30/@width;
+        }
+      }
+    }
+    .btn1{
+      width: 384/@width;
+      height: 96/@width;
+      position: absolute;
+      left: 183/@width;
+      bottom: 120/@width;
+    }
+    .qipao{
+      width: 293/@width;
+      height: 301/@width;
+      position: absolute;
+      background: url('./images/qipaonull.png');
+      background-size: 100% 100%;
+      left: 66/@width;
+      top: 10/@width;
+      z-index: 10;
+      font-weight: 900;
+      color: #5f3209;
+      text-align: center;
+      p{
+        line-height: 20/@width;
+      }
+      .num{
+        margin-top: 60/@width;
+      }
+    }
+    .content{
+      width: 648/@width;
+      height: 706/@width;
+      background: url('./images/datikuang.png');
+      background-size: 100% 100%;
+      position: absolute;
+      top: 231/@width;
+      left: 51/@width;
+      z-index: 9;
+      .guohui{
+        width: 161/@width;
+        height: 164/@width;
+        position: absolute;
+        right: -40/@width;
+        bottom: -60/@width;
+        z-index: 11;
+      }
+      .title{
+        padding: 125/@width 80/@width 0;
+        text-align: center;
+        color: #5f3209;
+        font-size: 30/@width;
+        font-weight: 900;
+        overflow: hidden;
+      }
+      .answer{
+        width: 500/@width;
+        height: 90/@width;
+        padding: 10/@width 20/@width 0;
+        background: url('./images/answer.png');
+        background-size: 100% 100%;
+        text-align: center;
+        margin: 20/@width auto;
+        line-height: 35/@width;
+        color: #5f3209;
+        font-size: 20/@width;
+      }
+      .active{
+        background: url('./images/focksAnswer.png');
+        background-size: 100% 100%;
+      }
+    }
+    .icon1{
+      width: 298/@width;
+      height: 306/@width;
+      position: absolute;
+      left: -74/@width;
+      bottom: 160/@width;
+    }
+  }
 }
