--- a/src/App.less
+++ b/src/App.less
@@ -4,6 +4,26 @@
   height: 100vh;
   background: url('./images/bg.png');
   text-align: center;
+  .muc{
+    position: absolute;
+    left: -999rem;
+    top: -999rem;
+  }
+  .play{
+    width: 60/@width;
+    height: 60/@width;
+    position: absolute;
+    right: 50/@width;
+    top: 50/@width;
+    z-index: 99999;
+  }
+  .musss{
+    animation:circleRoate 5s infinite linear ;
+  }
+  @keyframes circleRoate{
+        from{transform: rotate(0deg);}
+        to{transform: rotate(360deg);}
+  }
   .index{
     width: 100%;
     height: 100%;
